--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,14 +1,41 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="{% static 'css/external.css'%}">
+
+
+    <style>
+        h2{
+
+
+
+            color: bisque;
+            text-align: right;
+            border: 20px saddlebrown;
+        }
+        body{
+            background-color: black;
+            color: aqua;
+        }
+
+
+
+
+
+    </style>
 </head>
 <body>
+    <h1 style="color: brown; text-align: initial;">inline</h1>
+    <h2>internal styling</h2>
+    <h3>external</h3>
     <form action="" method="">
-        Username : <input type="text" name="nam"><br><br>
+        Username : <input type="text"  name="nam"><br><br>
         Password : <input type="password" name="pass"><br>
         <input type="submit" value="login">
     </form>  
