--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome, This is our home page</h1>
+    <h1 style="color: blueviolet;">Welcome, This is our home page</h1>
     
 </body>
 </html>
