--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -8,9 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="{% static 'css/external.css'%}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 
 
     <style>
+
         h2{
 
 
@@ -20,8 +24,12 @@
             border: 20px saddlebrown;
         }
         body{
-            background-color: black;
-            color: aqua;
+            background-color: cyan;;
+            color:black
+            ;
+        }
+        .se{
+            color: yellow;
         }
 
 
@@ -31,13 +39,36 @@
     </style>
 </head>
 <body>
+    <p class="se">
+        today is a fabulus day!!
+    </p>
     <h1 style="color: brown; text-align: initial;">inline</h1>
     <h2>internal styling</h2>
-    <h3>external</h3>
+    <h3 id="hi">external</h3>
+    <div class="hhi">
     <form action="" method="">
         Username : <input type="text"  name="nam"><br><br>
-        Password : <input type="password" name="pass"><br>
-        <input type="submit" value="login">
-    </form>  
+        Password : <input type="password" name="pass"><br><br>
+        <input type="submit" value="login"><br><br>
+    </form>
+    </div>
+   
+
+    
+    <div class="container-fluid">
+        <h5>using container </h5>
+        <div class="row">
+            <button type="button" class="btn btn-info">button</button>
+            <div class="col-lg-6">
+                <h6>sdgfrdf</h6></div>
+                <div class="col-lg-6">hryyyyy</div>
+            
+        </div>
+
+
+
+
+
+    </div>  
 </body>
 </html>
