--- a/myapp/templates/samplepage.html
+++ b/myapp/templates/samplepage.html
@@ -13,6 +13,11 @@
 background-color: blue;
 width: 300px;
 }
+body{
+    background-color: red;
+    padding-top: 200px;
+    padding-left: 400px;
+}
 
 
 
