--- a/myapp/templates/samplepage.html
+++ b/myapp/templates/samplepage.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,18 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="{% static 'js/external.js' %}">
+        document.write("javascript");
+
+    </script>
     <style>
 
 
 #a{
 
-background-color: blue;
-width: 300px;
+background-color: white;
+width: 200px;
+height: 300px;
 }
 body{
-    background-color: red;
-    padding-top: 200px;
-    padding-left: 400px;
+    background-color: cyan;
+    padding-top: 100px;
+    padding-left: 500px;
 }
 
 
@@ -25,7 +31,7 @@ body{
 
     </style>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid" >
         <div class="row">
             <div class="col-lg-12"></div>
 
@@ -33,14 +39,15 @@ body{
         <div class="row"></div>
         <div class="col-lg-3"></div>
         <div class="col-lg-6" id="a">
-            <form><center>
+            <form><center><br><br>
                 Username:
                 <input type="text" placeholder="username"><br><br>
                 password:
                 <input type="password" placeholder="password"><br><br>
-                <input type="submit"><br><br>
+                <input type="submit"  onclick="alert('cybersquare')"><br><br>
                 <input type="reset">
             </center>
+            <input type="button" onclick="exter()" value="sum">
 
 
 
