--- a/myapp/templates/samplepage.html
+++ b/myapp/templates/samplepage.html
@@ -7,17 +7,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="{% static 'js/external.js' %}">
-        document.write("javascript");
+        document.write("javascript");</script>
+        <script>
+        function v(){
+
+
+            username=document.getElementById("tt").value;
+            password=document.getElementById("hh").value;
+            if(username == ""  && password =="")
+            {
+                alert("please enter the username and password");
+            }
+           document.getElementById("e").innerHTML="enter the valid details"
+
+        }
+       
+        
+    
+
+
+ 
 
     </script>
+    
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function()
+       {
+
+       $("p").css("background-color","yellow");
+       $("#btn").click(function(){
+       $(this).hide();
+       });
+
+
+
+
+
+       });
+
+
+      
+   </script>
+
+
     <style>
 
 
 #a{
 
 background-color: white;
-width: 200px;
-height: 300px;
+width: 300px;
+height: 400px;
 }
 body{
     background-color: cyan;
@@ -31,6 +72,9 @@ body{
 
     </style>
 <body>
+
+
+    <p>jquery execution</p>
     <div class="container-fluid" >
         <div class="row">
             <div class="col-lg-12"></div>
@@ -40,19 +84,30 @@ body{
         <div class="col-lg-3"></div>
         <div class="col-lg-6" id="a">
             <form><center><br><br>
+                <h2>loginpage</h2>
+                <p id="e"></p>
                 Username:
                 <input type="text" placeholder="username"><br><br>
                 password:
                 <input type="password" placeholder="password"><br><br>
-                <input type="submit"  onclick="alert('cybersquare')"><br><br>
-                <input type="reset">
+                <input type="submit"  onclick="alert('cybersquare')">
+                <input type="reset"><br><br>
+            
+            <input type="button" onclick="exter()" value="sum"><br><br>
+            <input type="text" placeholder="name" id="tt"><br><br>
+            <input type="password" placeholder="password" id="hh"><br><br>
+            <input type ="button" value="button" onclick="v()">
             </center>
-            <input type="button" onclick="exter()" value="sum">
+            
+            
+            
+
 
 
 
 
             </form>
+            <button id="btn">jqry</button>
         </div>
         <div class="col-lg-3"></div>
 
